# shader-program

./: CMakeLists.txt  README.md
docs/: program_structure.md
src/: main.cpp
src/app/: app.cpp  app.h
src/camera/: camera.cpp  camera.h
src/compiler/compiler/: compiler.cpp
src/compiler/preprocessor/: preprocessor.cpp
src/gui/: gui.cpp  gui.h
tests/: test_camera.cpp  test_compiler.cpp  test_gui.cpp  test_gui_file_io.cpp  test_mouse.cpp  test_preprocessor.cpp  test_utils.h
